Add ArticleDTO and OrderDTO; update ClientDTO to include orders and enhance ClientServ with DTO conversions